--- a/index.html
+++ b/index.html
@@ -14,6 +14,46 @@
         alert('hello');
     </script> -->
     <!-- 3 option -->
+    <!-- <h1 id="title">Main title</h1>
+
+    <h1 id="title">Second title</h1>
+    <h1 id="title">Third title</h1> -->
+
+    <!-- <ul class="list">
+        <li class="listItems">1</li>
+        <li class="listItems">2</li>
+        <li class="listItems">3</li>
+    </ul> -->
+
+    <!-- <div class="textbox">
+        text here
+        <h1>sfsfsf</h1>
+        <p>text sfsdg</p>
+    </div> -->
+
+    <!-- <input type="text" class="inp" value="some value">
+    div -->
+
+    <!-- <div class="textbox">
+        
+    </div> -->
+
+    <!-- <h1 onclick="console.log('i was clicked')">This is a heading</h1> -->
+
+    <!-- <h1 onclick="sayHello()">this is header</h1> -->
+
+    <!-- <h1 class="header">My header</h1> -->
+
+   
+    <form class="form" action="">
+        <input class="name" type="text" name="" id="">
+        <input class="surname" type="text" name="" id="">
+        <input type="submit">
+    </form>
+
+
+
+
     <script src="app.js"></script>
 </body>
 </html>
